# tutor-contrib-payment-gateway

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
tutorpayment_gateway/: plugin.py
tutorpayment_gateway/patches/: openedx-dockerfile-post-python-requirements
tutorpayment_gateway/templates/payment-gateway/apps/payment_gateway_api/: setup.py
tutorpayment_gateway/templates/payment-gateway/apps/payment_gateway_api/payment_gateway_api/: __init__.py  apps.py  models.py  urls.py  views.py
tutorpayment_gateway/templates/payment-gateway/apps/payment_gateway_api/payment_gateway_api/migrations/: 0001_initial.py
tutorpayment_gateway/templates/payment-gateway/apps/payment_gateway_api/payment_gateway_api/settings/: common.py
